--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Leven - Resume / CV / vCard Template</title>
+    <title>Jean Allen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Leven - Resume / CV / vCard Template" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
@@ -56,49 +56,54 @@
             <!-- Navigation -->
             <div class="site-nav mobile-menu-hide">
               <ul class="leven-classic-menu site-main-menu">
+                
                 <li class="menu-item menu-item-has-children current-menu-item">
                   <a href="index.html">About Me</a>
                   <ul class="sub-menu">
                     <li class="menu-item current-menu-item">
-                      <a href="index.html">About Me 1</a>
-                    </li>
-                    <li class="menu-item">
-                      <a href="index-2.html">About Me 2</a>
+                      <a href="cv.html">CV</a>
                     </li>
                   </ul>
                 </li>
 
-                <li class="menu-item">
-                  <a href="resume.html">Resume</a>
-                </li>
-
                 <li class="menu-item menu-item-has-children">
-                  <a href="portfolio.html">Portfolio</a>
+                  <a href="research_landing.html">Research</a>
                   <ul class="sub-menu">
+
                     <li class="menu-item">
-                      <a href="portfolio-2-columns.html">Portfolio 2 Columns</a>
+                      <a href="publications.html">Publications</a>
                     </li>
-                    <li class="menu-item">
-                      <a href="portfolio.html">Portfolio 3 Columns</a>
-                    </li>
-                    <li class="menu-item">
-                      <a href="portfolio-4-columns.html">Portfolio 4 Columns</a>
-                    </li>
-                    <li class="menu-item">
-                      <a href="portfolio-5-columns.html">Portfolio 5 Columns</a>
-                    </li>
+
                   </ul>
                 </li>
                 
                 <li class="menu-item menu-item-has-children">
-                  <a href="blog.html">Blog</a>
+                  <a href="teaching_landing.html">Teaching</a>
                   <ul class="sub-menu">
+
                     <li class="menu-item">
-                      <a href="blog.html">Blog 2 Columns</a>
+                      <a href="teaching_philosophy.html">My Teaching Philosophy</a>
                     </li>
+
                     <li class="menu-item">
-                      <a href="blog-3-columns.html">Blog 3 Columns</a>
+                      <a href="teaching_sample_materials.html">Sample Materials</a>
                     </li>
+
+                  </ul>
+                </li>
+
+                <li class="menu-item menu-item-has-children">
+                  <a href="mentoring_landing.html">Mentoring & Outreach</a>
+                  <ul class="sub-menu">
+
+                    <li class="menu-item">
+                      <a href="sarp.html">SARP Mentoring</a>
+                    </li>
+
+                    <li class="menu-item">
+                      <a href="gee_lessons.html">GEE Coding Exercises</a>
+                    </li>
+
                   </ul>
                 </li>
 
