--- a/cv.html
+++ b/cv.html
@@ -59,45 +59,49 @@
                   <a href="index.html">About Me</a>
                   <ul class="sub-menu">
                     <li class="menu-item">
-                      <a href="index.html">About Me 1</a>
-                    </li>
-                    <li class="menu-item">
-                      <a href="index-2.html">About Me 2</a>
+                      <a href="cv.html">CV</a>
                     </li>
                   </ul>
                 </li>
 
-                <li class="menu-item current-menu-item">
-                  <a href="resume.html">Resume</a>
-                </li>
-
                 <li class="menu-item menu-item-has-children">
-                  <a href="portfolio.html">Portfolio</a>
+                  <a href="research/index.html">Research</a>
                   <ul class="sub-menu">
+
                     <li class="menu-item">
-                      <a href="portfolio-2-columns.html">Portfolio 2 Columns</a>
+                      <a href="research/publications.html">Publications</a>
                     </li>
-                    <li class="menu-item">
-                      <a href="portfolio.html">Portfolio 3 Columns</a>
-                    </li>
-                    <li class="menu-item">
-                      <a href="portfolio-4-columns.html">Portfolio 4 Columns</a>
-                    </li>
-                    <li class="menu-item">
-                      <a href="portfolio-5-columns.html">Portfolio 5 Columns</a>
-                    </li>
+
                   </ul>
                 </li>
                 
                 <li class="menu-item menu-item-has-children">
-                  <a href="blog.html">Blog</a>
+                  <a href="teaching/index.html">Teaching</a>
                   <ul class="sub-menu">
+
                     <li class="menu-item">
-                      <a href="blog.html">Blog 2 Columns</a>
+                      <a href="teaching/teaching_philosophy.html">My Teaching Philosophy</a>
                     </li>
+
                     <li class="menu-item">
-                      <a href="blog-3-columns.html">Blog 3 Columns</a>
+                      <a href="teaching/sample_materials.html">Sample Materials</a>
                     </li>
+
+                  </ul>
+                </li>
+
+                <li class="menu-item menu-item-has-children">
+                  <a href="outreach/index.html">Mentoring & Outreach</a>
+                  <ul class="sub-menu">
+
+                    <li class="menu-item">
+                      <a href="outreach/sarp.html">SARP Mentoring</a>
+                    </li>
+
+                    <li class="menu-item">
+                      <a href="outreach/gee_lessons.html">GEE Coding Exercises</a>
+                    </li>
+
                   </ul>
                 </li>
 
@@ -119,7 +123,7 @@
             <div id="primary" class="content-area">
 
               <div class="page-title">
-                <h1>Resume</h1>
+                <h1>CV -- UNDER CONSTRUCTION</h1>
                 <div class="page-subtitle">
                     <h4> 8 Years of Experience</h4>
                 </div>
