--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                             <p>// LANDING PAGE UNDER CONSTRUCTION //</p>
                                  
                             <div class="home-buttons">
-                              <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
-                              <a href="#" target="_self" class="btn btn-secondary">Contact</a>
+                              <a href="cv.html" target="_blank" class="btn btn-primary">Download CV</a>
+                              <a href="mailto:jean.allen@geog.ucsb.edu" target="_blank" class="btn btn-secondary">Contact</a>
                             </div>
                           </div>
                         </div>
