--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                       <a href="teaching/sample_materials.html">Sample Materials</a>
                     </li>
 
+                    <li class="menu-item">
+                      <a href="teaching/teaching_evaluations.html">Teaching Evaluations</a>
+                    </li>
+
                   </ul>
                 </li>
 
@@ -144,7 +148,13 @@
                                 <h4>Remote Sensing Researcher</h4>
                               </div>
                               <div class="item">
-                                <h4>Ecologist • Spectral Data Enthusiast</h4>
+                                <h4>Spectroscopy Enthusiast</h4>
+                              </div>
+                              <div class="item">
+                                <h4>Ecologist</h4>
+                              </div>
+                              <div class="item">
+                                <h4>Amateur Personal Website Developer</h4>
                               </div>
                             </div>
                           </div>
