--- a/outreach/gee_lessons.html
+++ b/outreach/gee_lessons.html
@@ -109,8 +109,12 @@
             <div id="primary" class="content-area">
               <div id="content" class="page-content site-content single-post" role="main">
                 <div class="page-title">
-                  <h2>UNDER CONSTRUCTION</h2>
+                  <h2>Introductory Google Earth Engine Exercises</h2>
                 </div>
+
+                <p>I designed these exercises for a course I taught on applications of remote sensing. They are designed for students who are familiar with fundamentals of remote sensing -- e.g., a challenge in the first exercise asks students to make a false color composite.</p>
+                <p>These exercises are meant to be taught in a live coding format -- i.e., the instructor types out the code line by line on a projector, explaining key concepts along the way, while students code along on their own devices.</p>
+                <p>I am definitely soliciting feedback on these -- they are very much a first draft, so if you have any ideas or feedback, I want to hear it!</p>
 
                 <div class="row">
                   <div class=" col-xs-12 col-sm-12">
@@ -120,7 +124,7 @@
                       <!-- Exercise 1: Welcome to GEE! -->
                       <div class="row" style="margin-bottom: 40px;">
                         <div class="col-md-6">
-                          <img src="img/exercise1_thumbnail.jpg" alt="Thumbnail for Exercise 1" style="width:100%; border-radius: 8px;">
+                          <img src="/img/ex1.png" alt="Thumbnail for Exercise 1" style="width:100%; border-radius: 8px;">
                         </div>
                         <div class="col-md-6">
                           <h3>Exercise 1: Welcome to Google Earth Engine!</h3>
