added gee exercises

--- a/outreach/gee_lessons.html
+++ b/outreach/gee_lessons.html
@@ -133,6 +133,59 @@
                           <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fend%2Fex1" class="btn btn-secondary" target="_blank">Completed GEE Script</a>
                         </div>
                       </div>
+
+                      <!-- Exercise 2: Mapping Urban Green Space -->
+                      <div class="row" style="margin-bottom: 40px;">
+                        <div class="col-md-6">
+                          <img src="/img/ex2.png" alt="Thumbnail for Exercise 2" style="width:100%; border-radius: 8px;">
+                        </div>
+                        <div class="col-md-6">
+                          <h3>Exercise 2: Mapping Urban Green Space</h3>
+                          <p>In this exercise, students create a map of urban green space in a city of their choosing using spectral indices and thresholding. They also refine their visualization skills and try some new color palettes.</p>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fbeginning%2Fex2" class="btn btn-primary" target="_blank" style="margin-right:10px;">Student Starting Script</a>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fend%2Fex2" class="btn btn-secondary" target="_blank">Completed GEE Script</a>
+                        </div>
+                      </div>
+
+                      <!-- Exercise 3: Phenology -->
+                      <div class="row" style="margin-bottom: 40px;">
+                        <div class="col-md-6">
+                          <img src="/img/ex3.png" alt="Thumbnail for Exercise 3" style="width:100%; border-radius: 8px;">
+                        </div>
+                        <div class="col-md-6">
+                          <h3>Exercise 3: Comparing and Contrasting Phenology</h3>
+                          <p>In this exercise, students choose two study sites to compare and contrast phenological dynamics. They learn to make charts, export data, and synthesize their findings into figures.</p>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fbeginning%2Fex3" class="btn btn-primary" target="_blank" style="margin-right:10px;">Student Starting Script</a>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fend%2Fex3" class="btn btn-secondary" target="_blank">Completed GEE Script</a>
+                        </div>
+                      </div>
+
+                      <!-- Exercise 4: Classification -->
+                      <div class="row" style="margin-bottom: 40px;">
+                        <div class="col-md-6">
+                          <img src="/img/ex4.png" alt="Thumbnail for Exercise 4" style="width:100%; border-radius: 8px;">
+                        </div>
+                        <div class="col-md-6">
+                          <h3>Exercise 4: Supervised Classification</h3>
+                          <p>In this exercise, students run a random forest algorithm to classify landcover types in Los Angeles.</p>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fbeginning%2Fex4" class="btn btn-primary" target="_blank" style="margin-right:10px;">Student Starting Script</a>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fend%2Fex4" class="btn btn-secondary" target="_blank">Completed GEE Script</a>
+                        </div>
+                      </div>
+
+                      <!-- Exercise 5: NEON AOP LiDAR Processing -->
+                      <div class="row" style="margin-bottom: 40px;">
+                        <div class="col-md-6">
+                          <img src="/img/ex5.png" alt="Thumbnail for Exercise 5" style="width:100%; border-radius: 8px;">
+                        </div>
+                        <div class="col-md-6">
+                          <h3>Exercise 5: Terrain Analysis with LiDAR</h3>
+                          <p>In this exercise, students learn to process LiDAR data collected by the NEON AOP instrument, including calculating terrain properties (such as slope and aspect) and tree canopy height.</p>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fbeginning%2Fex5" class="btn btn-primary" target="_blank" style="margin-right:10px;">Student Starting Script</a>
+                          <a href="https://code.earthengine.google.com/?scriptPath=users%2Fjeantallen%2FRemoteSensing115C%3Aclassdemos%2Fend%2Fex5" class="btn btn-secondary" target="_blank">Completed GEE Script</a>
+                        </div>
+                      </div>
+
                     </div>
                   </div>
                 </div>
