--- a/outreach/sarp.html
+++ b/outreach/sarp.html
@@ -134,10 +134,37 @@
                       <img src="/img/sarp_2023_final_presentations.png" alt="SARP mentoring" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
                     </div>
                   </div>
-
-                  <h3 style="margin-top: 40px;">Mentoring Feedback</h3>
-
                 </section>
+
+                <section class="student-feedback-section" style="padding: 40px 20px; background-color: #f9f9f9;">
+                  <div class="container">
+                    <h3 style="text-align: center; margin-bottom: 30px;">What My Students Said...</h3>
+
+                    <img src="/img/sarp_feedback_2022.png" alt="SARP mentoring" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+
+                    <!-- Quote 1 -->
+                    <div class="quote-block" style="margin-bottom: 30px;">
+                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #555;">
+                        "I'm already planning on writing a personal note to Jean, so I will keep it short here. You made a great choice in hiring Jean as a mentor. He was always willing to help, somehow knew a lot about everyone's project, and encouraged us to think scientifically in every aspect. Additionally, he was incredibly kind and personable, and he made us a really cohesive group. Jean is someone I aspire to be like, and I hope that you strongly consider bringing him back as long as he has the time next summer!."
+                      </blockquote>
+                    </div>
+
+                    <!-- Quote 2 -->
+                    <div class="quote-block" style="margin-bottom: 30px;">
+                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #555;">
+                        "I’ve never met someone who is as dedicated and caring as he is. I was always impressed with how he could explain complex ideas in such a simple and understandable way. He very quickly picked up on each student's different learning styles and adjusted to help each of us."
+                      </blockquote>
+                    </div>
+
+                    <!-- Quote 3 -->
+                    <div class="quote-block">
+                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #555;">
+                        "It was great connecting with Jean on both a personal and professional level, and I look up to him in a lot of ways."
+                      </blockquote>
+                    </div>
+                  </div>
+                </section>
+
               </div>
             </div>
           </div>
