--- a/outreach/sarp.html
+++ b/outreach/sarp.html
@@ -136,7 +136,7 @@
                   </div>
                 </section>
 
-                <section class="student-feedback-section" style="padding: 40px 20px; background-color: #f9f9f9;">
+                <section class="student-feedback-section" style="padding: 40px 20px">
                   <div class="container">
                     <h3 style="text-align: center; margin-bottom: 30px;">What My Students Said...</h3>
 
