--- a/outreach/sarp.html
+++ b/outreach/sarp.html
@@ -144,23 +144,70 @@
 
                     <!-- Quote 1 -->
                     <div class="quote-block" style="margin-bottom: 30px;">
-                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #555;">
+                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #FFFFFF;">
                         "I'm already planning on writing a personal note to Jean, so I will keep it short here. You made a great choice in hiring Jean as a mentor. He was always willing to help, somehow knew a lot about everyone's project, and encouraged us to think scientifically in every aspect. Additionally, he was incredibly kind and personable, and he made us a really cohesive group. Jean is someone I aspire to be like, and I hope that you strongly consider bringing him back as long as he has the time next summer!."
                       </blockquote>
                     </div>
 
                     <!-- Quote 2 -->
                     <div class="quote-block" style="margin-bottom: 30px;">
-                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #555;">
+                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #FFFFFF;">
                         "I’ve never met someone who is as dedicated and caring as he is. I was always impressed with how he could explain complex ideas in such a simple and understandable way. He very quickly picked up on each student's different learning styles and adjusted to help each of us."
                       </blockquote>
                     </div>
 
                     <!-- Quote 3 -->
                     <div class="quote-block">
-                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #555;">
+                      <blockquote style="font-style: italic; border-left: 4px solid #007BFF; padding-left: 15px; color: #FFFFFF;">
                         "It was great connecting with Jean on both a personal and professional level, and I look up to him in a lot of ways."
                       </blockquote>
+                    </div>
+                  </div>
+                </section>
+
+                <section class="sarp-photo-carousel" style="padding: 40px 0;">
+                  <div class="container">
+                    <h3 style="text-align: center; margin-bottom: 30px;">Snapshots from SARP</h3>
+
+                    <div id="sarpCarousel" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+
+                        <!-- Slide 1 -->
+                        <div class="carousel-item active">
+                          <img class="d-block w-100" src="/img/sarp_img_1.jpg" alt="Student working with airborne data">
+                        </div>
+
+                        <!-- Slide 2 -->
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="/img/sarp_img_2.jpg" alt="Group photo at lab site">
+                        </div>
+
+                        <!-- Slide 3 -->
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="/img/sarp_img_3.jpg" alt="Fieldwork selfie moment">
+                        </div>
+
+                        <!-- Slide 4 -->
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="/img/sarp_img_4.jpg" alt="Fieldwork selfie moment">
+                        </div>
+
+                        <!-- Slide 5 -->
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="/img/sarp_img_5.jpg" alt="Fieldwork selfie moment">
+                        </div>
+
+                      </div>
+
+                      <!-- Controls -->
+                      <a class="carousel-control-prev" href="#sarpCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#sarpCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
                     </div>
                   </div>
                 </section>
