--- a/outreach/sarp.html
+++ b/outreach/sarp.html
@@ -212,6 +212,8 @@
                   </div>
                 </section>
 
+                <p>@jean -- add MESMA workshop and researchrabbit tutorial here</p>
+
               </div>
             </div>
           </div>
